<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8AC6C0DA"
    tools:context=".activity.Screen2Activity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/vehicle"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPageDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:text="@string/vehicle_page_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvPageTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVehicle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="24dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvPageDescription"
        app:layout_constraintBottom_toTopOf="@id/btnBack"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:textAllCaps="false"
        android:paddingStart="30dp"
        android:gravity="center"
        android:paddingEnd="40dp"
        android:textColor="@color/white"
        android:background="@drawable/round_button_with_gray_color"
        android:drawableLeft="@drawable/ic_back"
        android:text="@string/back"
        android:drawablePadding="-5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        tools:ignore="RtlHardcoded"
        android:focusable="true"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_button_with_gray_color"
        android:drawableEnd="@drawable/ic_next_color_whit"
        android:text="@string/next"
        android:textSize="16sp"
        android:gravity="center"
        android:textAllCaps="false"
        android:drawablePadding="-5dp"
        android:clickable="false"
        android:paddingStart="40dp"
        android:paddingEnd="30dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd" />

</androidx.constraintlayout.widget.ConstraintLayout>