<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/imageViewServiceProvider"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bartending"
                android:textSize="15sp"
                android:id="@+id/tvServiceProviderName"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="@id/imageViewServiceProvider"
                app:layout_constraintStart_toStartOf="@id/imageViewServiceProvider"
                app:layout_constraintTop_toBottomOf="@id/imageViewServiceProvider"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_33_hr"
                android:textSize="15sp"
                android:id="@+id/tvServiceProviderRate"
                android:textColor="@color/gray_808080"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="@id/imageViewServiceProvider"
                app:layout_constraintStart_toStartOf="@id/tvServiceProviderName"
                app:layout_constraintTop_toBottomOf="@id/tvServiceProviderName"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>