<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8AC6C0DA"
    tools:context=".activity.Screen3Activity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/payout_preference"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPageDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/how_will_you_structure_payments_for_this_task"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvPageTitle" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/rgPaymentMethod"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvPageDescription">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:id="@+id/cvFlatFree"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbFlatFree"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:button="@drawable/checked_radio_button"
                        android:buttonTint="@color/purple_700"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/flat_free"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:id="@+id/tvFlatFree"
                        android:layout_marginTop="9dp"
                        android:fontFamily="@font/roboto_medium"
                        app:layout_constraintStart_toEndOf="@id/rbFlatFree"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvDescriptionFlatFree"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/flat_free_description"
                        app:layout_constraintTop_toBottomOf="@id/tvFlatFree"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="22dp"
                        app:layout_constraintStart_toEndOf="@id/rbFlatFree" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:id="@+id/cvHourly"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvFlatFree">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbHourly"
                        android:buttonTint="@color/purple_700"
                        android:button="@drawable/checked_radio_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/hourly"
                        android:textSize="20sp"
                        android:id="@+id/tvHourly"
                        android:layout_marginTop="9dp"
                        android:fontFamily="@font/roboto_medium"
                        app:layout_constraintStart_toEndOf="@id/rbHourly"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/hour_description"
                        app:layout_constraintTop_toBottomOf="@id/tvHourly"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="22dp"
                        app:layout_constraintStart_toEndOf="@id/rbHourly" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/round_button_with_purple_color"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:id="@+id/btnNext"
        app:layout_constraintBottom_toTopOf="@id/btnSaveAndContinue"
        android:drawableEnd="@drawable/ic_next_gray_colour"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnSaveAndContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button_gray_border"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/save_and_continue_later"
        android:textAllCaps="false"
        android:textColor="@color/gray_808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>
</androidx.constraintlayout.widget.ConstraintLayout>