<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPaymentItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutSection1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPaymentName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/payment"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/tvPaymentAmount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPaymentAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/payment_method"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvPaymentName"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPaymentStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/payment_method"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPaymentName" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewCard"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_next_gray_colour"
                    app:layout_constraintBottom_toBottomOf="@id/tvPaymentStatus"
                    app:layout_constraintEnd_toStartOf="@id/tvCardEnding"
                    app:layout_constraintTop_toTopOf="@id/tvPaymentStatus" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCardEnding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/card_ending_day"
                    android:textColor="@color/gray_808080"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvPaymentStatus" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:id="@+id/tvAuthorizeDateAndTime"
                    android:layout_marginBottom="10dp"
                    android:text="@string/authorized_date_and_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCardEnding" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="#B7F3F2F2"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layoutSection1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/imageViewPerson"
                    android:src="@drawable/ic_next_gray_colour"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_name"
                    android:id="@+id/tvPersonName"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@id/imageViewPerson"
                    app:layout_constraintBottom_toBottomOf="@id/imageViewPerson"
                    app:layout_constraintStart_toEndOf="@id/imageViewPerson"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_id"
                    android:textColor="@color/gray_808080"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:drawableEnd="@drawable/ic_next_gray_colour"
                    android:id="@+id/tvTaskId"
                    app:layout_constraintTop_toTopOf="@id/imageViewPerson"
                    app:layout_constraintBottom_toBottomOf="@id/imageViewPerson"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>